fixed overflow

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -15,10 +15,15 @@
   }
 }
 
-
-.background {
-  background-color: #CCCCCC;
+html, body {
+    line-height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
+
 
 h1 {
   vertical-align: middle;
